--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <div class="logo-links">
     <!-- Instagram Logo -->
     <a href="https://www.instagram.com/j_u_j_u_1_9_3?igsh=MWx1eDRkZ2RkNnB3Mw==" target="_blank">
-        <img src="2.png" 
-             alt="Instagram" width="50" height="50">
+        <img src="2.gif" 
+             alt="Instagram" width="310" height="35">
     </a>
 
     <!-- Legend of Speed Logo -->
     <a href="https://jujux1.github.io/Legend-of-speed-pet-glitch-calculator/" target="_blank">
-        <img src="1.png" width="50" height="50">
+        <img src="1.gif" width="310" height="35">
     </a>
 </div>
 <style>
